@@ -4,6 +4,7 @@ Date: ????
   Bugfixes:
     - Fixed a crash on resource compression when that resource had no minable result(s)
     - Fixed that recharge_minimum was not multiplied by the compression factor
+    - Fixed that the compression factor was not applied to certain energy_source parameters
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.20
 Date: 2022.05.01
